--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,18 @@
     "minimum-stability": "stable",
     "require": {
         "zendframework/zendframework1": "1.12.3",
-        "doctrine/orm": "2.1.3"
+        "doctrine/orm": "2.1.3",
+        "ruflin/elastica": "v0.19.0.0",
+        "doctrine/migrations": "dev-master"
     },
     "autoload": {
         "psr-0": {
             "Boilerplate_": "library/",
-            "Elastica_": "library/",
             "Bisna\\": "library/",
             "Doctrine\\": "library/",
             "App\\": "library/",
-            "EasyBib_": "library/"
+            "EasyBib_": "library/",
+            "Symfony\\": "library/"
         }
     }
 }
