--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,28 @@
         }
     ],
     "minimum-stability": "stable",
+
+    "repositories": {
+        "phpRack": {
+            "type": "package",
+            "package": {
+                "name": "tpc2/phpRack",
+                "version": "1.0.0",
+                "source": {
+                    "url": "https://github.com/tpc2/phprack",
+                    "type": "git",
+                    "reference": "e0ebc785edd2f01d7e5da5c9e640f8e1df1f9595"
+                }
+            }
+        }
+    },
     "require": {
         "zendframework/zendframework1": "1.12.3",
         "doctrine/orm": "2.1.3",
         "ruflin/elastica": "v0.19.0.0",
         "doctrine/migrations": "dev-master"
+        "doctrine/migrations": "dev-master",
+        "tpc2/phpRack": "1.0.0",
     },
     "autoload": {
         "psr-0": {
