--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
         "zendframework/zendframework1": "1.12.3",
         "doctrine/orm": "2.1.3",
         "ruflin/elastica": "v0.19.0.0",
-        "doctrine/migrations": "dev-master"
         "doctrine/migrations": "dev-master",
         "emagister/zend-form-decorators-bootstrap": "dev-master",
         "tpc2/phpRack": "1.0.0",
@@ -39,6 +38,7 @@
             "Bisna\\": "library/",
             "Doctrine\\": "library/",
             "App\\": "library/",
+            "App_": "library/",
             "Symfony\\": "library/"
         }
     }
