--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require": {
         "zendframework/zendframework1": "1.12.3",
-        "doctrine/orm": "2.1.3",
+        "doctrine/orm": "2.3.*",
         "ruflin/elastica": "v0.19.0.0",
         "doctrine/migrations": "dev-master",
         "emagister/zend-form-decorators-bootstrap": "dev-master",
