After some stressing out, migrated zf1-doctrine2 library to Composer. Yay.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,22 +1,30 @@
 [production]
-resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+; Make sure Zend_Layout is loaded. This is needed by Boilerplate_Controller_Plugin_ModuleLayout
+resources.layout = ""
 
 ; --------------------------
 ; PHP Specific Configuration
 ; --------------------------
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
+phpSettings.display_startup_errors = 0
+phpSettings.display_errors = 0
 phpSettings.soap.wsdl_cache_enabled = 1
+
+; Add the Library to the include path.
 includePaths.library = APPLICATION_PATH "/../library"
-includePaths.resource = APPLICATION_PATH "/../library/Bisna/Application/Resource"
+includePaths.library = APPLICATION_PATH "/../vendor/guilhermeblanco/zendframework1-doctrine2/library"
 
 ; ----------------------------------------
 ; Zend Framework Application Configuration
 ; ----------------------------------------
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
+
+; Add the Controller Dependency Injector to the pluginpath.
 pluginPaths.Boilerplate_Resource = "Boilerplate/Resource"
-pluginPaths.Bisna_Application_Resource = "Bisna/Application/Resource"
+
+; Load the Bisana Application Resource, based on the includePath
+pluginPaths.Bisna\Application\Resource\ = "Bisna/Application/Resource"
+
 appnamespace = "Application"
 resources.Depinjector = ""
 resources.locale.default = "en"
@@ -32,6 +40,29 @@ resources.frontController.defaultModule = "site"
 resources.frontController.actionhelperpaths.Boilerplate_Controller_Helper = "Boilerplate/Controller/Helper"
 
 
+resources.doctrine.classLoader.loaderClass = "Doctrine\Common\ClassLoader"
+resources.doctrine.classLoader.loaderFile  = APPLICATION_PATH "/../vendor/doctrine/common/lib/Doctrine/Common/ClassLoader.php"
+
+; Namespace loader for Doctrine\Common
+resources.doctrine.classLoader.loaders.doctrine_common.namespace   = "Doctrine\Common"
+resources.doctrine.classLoader.loaders.doctrine_common.includePath =  APPLICATION_PATH "/../vendor/doctrine/common/lib"
+
+; Namespace loader for Doctrine\DBAL
+resources.doctrine.classLoader.loaders.doctrine_dbal.namespace   = "Doctrine\DBAL"
+resources.doctrine.classLoader.loaders.doctrine_dbal.includePath =  APPLICATION_PATH "/../vendor/doctrine/dbal/lib"
+
+; Namespace loader for Doctrine\ORM
+resources.doctrine.classLoader.loaders.doctrine_orm.namespace   = "Doctrine\ORM"
+resources.doctrine.classLoader.loaders.doctrine_orm.includePath =  APPLICATION_PATH "/../vendor/doctrine/orm/lib"
+
+; Namespace loader for Symfony\Component\Console
+resources.doctrine.classLoader.loaders.symfony_console.namespace   = "Symfony\Component\Console"
+resources.doctrine.classLoader.loaders.symfony_console.includePath = APPLICATION_PATH "/../vendor/symfony/console"
+
+; Namespace loader for Symfony\Component\Yaml
+resources.doctrine.classLoader.loaders.symfony_yaml.namespace   = "Symfony\Component\Yaml"
+resources.doctrine.classLoader.loaders.symfony_yaml.includePath = APPLICATION_PATH "/../vendor/symfony/yaml"
+
 ; ------------------------------------------------------------------------------
 ; Doctrine Cache Configuration
 ; ------------------------------------------------------------------------------
@@ -40,16 +71,10 @@ resources.frontController.actionhelperpaths.Boilerplate_Controller_Helper = "Boi
 resources.doctrine.cache.defaultCacheInstance = default
 
 ; Cache Instance configuration for "default" cache
-;resources.doctrine.cache.instances.default.id = default
 resources.doctrine.cache.instances.default.adapterClass = "Doctrine\Common\Cache\MemcacheCache"
 resources.doctrine.cache.instances.default.namespace    = "App_"
 resources.doctrine.cache.instances.default.options.servers.0.host = localhost
 resources.doctrine.cache.instances.default.options.servers.0.port = 11211
-;resources.doctrine.cache.instances.default.options.servers.0.persistent    = true
-;resources.doctrine.cache.instances.default.options.servers.0.weight        = 1
-;resources.doctrine.cache.instances.default.options.servers.0.timeout       = 1
-;resources.doctrine.cache.instances.default.options.servers.0.retryInterval = 15
-;resources.doctrine.cache.instances.default.options.servers.0.status        = true
 
 ; ------------------------------------------------------------------------------
 ; Doctrine DBAL Configuration
@@ -61,7 +86,6 @@ resources.doctrine.dbal.defaultConnection = default
 ; DBAL Connection configuration for "default" connection
 ;resources.doctrine.dbal.connections.default.id = default
 ;resources.doctrine.dbal.connections.default.eventManagerClass  = "Doctrine\Common\EventManager"
-;resources.doctrine.dbal.connections.default.eventSubscribers[] = "DoctrineExtensions\Sluggable\SluggableSubscriber"
 ;resources.doctrine.dbal.connections.default.configurationClass = "Doctrine\DBAL\Configuration"
 ;resources.doctrine.dbal.connections.default.sqlLoggerClass     = "Doctrine\DBAL\Logging\EchoSQLLogger"
 
@@ -108,10 +132,10 @@ resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.annotati
 ; Custom Routes
 ; ------------------------------------------------------------------------------
 
-resources.router.routes.artists.route = "/homepage"
-resources.router.routes.artists.defaults.controller = index
-resources.router.routes.artists.defaults.action = index
-resources.router.routes.artists.defaults.module = site
+resources.router.routes.quotes.route = "/homepage"
+resources.router.routes.quotes.defaults.controller = index
+resources.router.routes.quotes.defaults.action = index
+resources.router.routes.quotes.defaults.module = site
 
 
 [staging : production]
