--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "tpc2/phpRack": "1.0.0",
         "symfony/console": "2.*",
         "symfony/yaml": "2.*",
-        "guilhermeblanco/zendframework1-doctrine2": "dev-master"
+        "guilhermeblanco/zendframework1-doctrine2": "dev-master",
+        "pimple/pimple": "1.0.*@dev"
     },
     "autoload": {
         "psr-0": {
